--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="mid">
         <h2>Show like:</h2>
-        <a href="#">Table</a>
+        <a href="#"data-table>Table</a>
         <a href="#">Card</a>
       </div>
       <div class="bottom">
@@ -42,6 +42,7 @@
           </tbody>
         </table>
       </div>
+      <div class="cont"></div>
     </main>
     <div class="modalMain">
       <div class="modal_bg"></div>
